added urbanization state level variable

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4006,6 +4006,592 @@
    "outputs": [],
    "source": [
     "df6.to_csv(\"cleaned_aqi_model_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "import requests # library to handle requests\n",
+    "from bs4 import BeautifulSoup # library to parse HTML documents\n",
+    "\n",
+    "# get the response in the form of html\n",
+    "wikiurl=\"https://en.wikipedia.org/wiki/Urbanization_in_the_United_States#Historical_statistics\"\n",
+    "table_class=\"wikitable sortable jquery-tablesorter\"\n",
+    "response=requests.get(wikiurl)\n",
+    "print(response.status_code)\n",
+    "\n",
+    "# parse data from the html into a beautifulsoup object\n",
+    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "indiatable=soup.find('table',{'class':\"wikitable\"})\n",
+    "\n",
+    "df=pd.read_html(str(indiatable))\n",
+    "# convert list to dataframe\n",
+    "df=pd.DataFrame(df[0])\n",
+    "df.head()\n",
+    "\n",
+    "df.to_csv(\"urban_pop_percentages_state.csv\", index=False)\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>County</th>\n",
+       "      <th>State</th>\n",
+       "      <th>percentage20_Donald_Trump</th>\n",
+       "      <th>percentage20_Joe_Biden</th>\n",
+       "      <th>avg_sal_2022</th>\n",
+       "      <th>white_perc</th>\n",
+       "      <th>baa_perc</th>\n",
+       "      <th>asian_perc</th>\n",
+       "      <th>native_perc</th>\n",
+       "      <th>pi_perc</th>\n",
+       "      <th>his_perc</th>\n",
+       "      <th>AQI</th>\n",
+       "      <th>CO_perc</th>\n",
+       "      <th>NO2_perc</th>\n",
+       "      <th>O3_perc</th>\n",
+       "      <th>PM2.5_perc</th>\n",
+       "      <th>PM10_perc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.762</td>\n",
+       "      <td>0.223</td>\n",
+       "      <td>56,747</td>\n",
+       "      <td>0.893656</td>\n",
+       "      <td>0.094556</td>\n",
+       "      <td>0.017246</td>\n",
+       "      <td>0.017071</td>\n",
+       "      <td>0.002414</td>\n",
+       "      <td>0.050362</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.808511</td>\n",
+       "      <td>0.191489</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Clay</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.808</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>39,876</td>\n",
+       "      <td>0.851035</td>\n",
+       "      <td>0.153050</td>\n",
+       "      <td>0.004719</td>\n",
+       "      <td>0.012326</td>\n",
+       "      <td>0.001056</td>\n",
+       "      <td>0.031835</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DeKalb</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.844</td>\n",
+       "      <td>0.146</td>\n",
+       "      <td>40,558</td>\n",
+       "      <td>0.946637</td>\n",
+       "      <td>0.026404</td>\n",
+       "      <td>0.007236</td>\n",
+       "      <td>0.037126</td>\n",
+       "      <td>0.006820</td>\n",
+       "      <td>0.159921</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.925620</td>\n",
+       "      <td>0.074380</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Elmore</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.736</td>\n",
+       "      <td>0.252</td>\n",
+       "      <td>49,071</td>\n",
+       "      <td>0.764367</td>\n",
+       "      <td>0.230173</td>\n",
+       "      <td>0.011433</td>\n",
+       "      <td>0.011121</td>\n",
+       "      <td>0.001999</td>\n",
+       "      <td>0.031799</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Etowah</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.745</td>\n",
+       "      <td>0.242</td>\n",
+       "      <td>42,951</td>\n",
+       "      <td>0.825877</td>\n",
+       "      <td>0.163812</td>\n",
+       "      <td>0.011262</td>\n",
+       "      <td>0.015201</td>\n",
+       "      <td>0.004152</td>\n",
+       "      <td>0.047736</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.424581</td>\n",
+       "      <td>0.575419</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    County    State  percentage20_Donald_Trump  percentage20_Joe_Biden  \\\n",
+       "0  Baldwin  Alabama                      0.762                   0.223   \n",
+       "1     Clay  Alabama                      0.808                   0.183   \n",
+       "2   DeKalb  Alabama                      0.844                   0.146   \n",
+       "3   Elmore  Alabama                      0.736                   0.252   \n",
+       "4   Etowah  Alabama                      0.745                   0.242   \n",
+       "\n",
+       "  avg_sal_2022  white_perc  baa_perc  asian_perc  native_perc   pi_perc  \\\n",
+       "0       56,747    0.893656  0.094556    0.017246     0.017071  0.002414   \n",
+       "1       39,876    0.851035  0.153050    0.004719     0.012326  0.001056   \n",
+       "2       40,558    0.946637  0.026404    0.007236     0.037126  0.006820   \n",
+       "3       49,071    0.764367  0.230173    0.011433     0.011121  0.001999   \n",
+       "4       42,951    0.825877  0.163812    0.011262     0.015201  0.004152   \n",
+       "\n",
+       "   his_perc  AQI  CO_perc  NO2_perc   O3_perc  PM2.5_perc  PM10_perc  \n",
+       "0  0.050362   40      0.0       0.0  0.808511    0.191489        0.0  \n",
+       "1  0.031835   27      0.0       0.0  0.000000    1.000000        0.0  \n",
+       "2  0.159921   37      0.0       0.0  0.925620    0.074380        0.0  \n",
+       "3  0.031799   37      0.0       0.0  1.000000    0.000000        0.0  \n",
+       "4  0.047736   42      0.0       0.0  0.424581    0.575419        0.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aqi = pd.read_csv(\"cleaned_aqi_model_data.csv\")\n",
+    "aqi.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urban = pd.read_csv(\"2020_urban_pop_percentages_state.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urban['2020'] = urban['2020'].str.rstrip('%').astype('float') / 100.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.577\n",
+       "1     0.649\n",
+       "2     0.893\n",
+       "3     0.555\n",
+       "4     0.942\n",
+       "5     0.860\n",
+       "6     0.863\n",
+       "7     0.826\n",
+       "8     1.000\n",
+       "9     0.915\n",
+       "10    0.741\n",
+       "11    0.861\n",
+       "12    0.692\n",
+       "13    0.869\n",
+       "14    0.712\n",
+       "15    0.632\n",
+       "16    0.723\n",
+       "17    0.587\n",
+       "18    0.715\n",
+       "19    0.386\n",
+       "20    0.856\n",
+       "21    0.913\n",
+       "22    0.735\n",
+       "23    0.719\n",
+       "24    0.463\n",
+       "25    0.695\n",
+       "26    0.534\n",
+       "27    0.730\n",
+       "28    0.941\n",
+       "29    0.583\n",
+       "30    0.938\n",
+       "31    0.745\n",
+       "32    0.874\n",
+       "33    0.667\n",
+       "34    0.610\n",
+       "35    0.763\n",
+       "36    0.646\n",
+       "37    0.805\n",
+       "38    0.765\n",
+       "39    0.911\n",
+       "40    0.679\n",
+       "41    0.572\n",
+       "42    0.662\n",
+       "43    0.837\n",
+       "44    0.898\n",
+       "45    0.351\n",
+       "46    0.756\n",
+       "47    0.834\n",
+       "48    0.446\n",
+       "49    0.671\n",
+       "50    0.620\n",
+       "51    0.919\n",
+       "Name: 2020, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urban['2020']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>urban_perc_state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>0.649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>0.893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>0.555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>0.942</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State  urban_perc_state\n",
+       "0     Alabama             0.577\n",
+       "1      Alaska             0.649\n",
+       "2     Arizona             0.893\n",
+       "3    Arkansas             0.555\n",
+       "4  California             0.942"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urban.rename(columns={'2020': 'urban_perc_state'}, inplace=True)\n",
+    "urban.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>urban_perc_state</th>\n",
+       "      <th>County</th>\n",
+       "      <th>percentage20_Donald_Trump</th>\n",
+       "      <th>percentage20_Joe_Biden</th>\n",
+       "      <th>avg_sal_2022</th>\n",
+       "      <th>white_perc</th>\n",
+       "      <th>baa_perc</th>\n",
+       "      <th>asian_perc</th>\n",
+       "      <th>native_perc</th>\n",
+       "      <th>pi_perc</th>\n",
+       "      <th>his_perc</th>\n",
+       "      <th>AQI</th>\n",
+       "      <th>CO_perc</th>\n",
+       "      <th>NO2_perc</th>\n",
+       "      <th>O3_perc</th>\n",
+       "      <th>PM2.5_perc</th>\n",
+       "      <th>PM10_perc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.577</td>\n",
+       "      <td>Baldwin</td>\n",
+       "      <td>0.762</td>\n",
+       "      <td>0.223</td>\n",
+       "      <td>56,747</td>\n",
+       "      <td>0.893656</td>\n",
+       "      <td>0.094556</td>\n",
+       "      <td>0.017246</td>\n",
+       "      <td>0.017071</td>\n",
+       "      <td>0.002414</td>\n",
+       "      <td>0.050362</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.808511</td>\n",
+       "      <td>0.191489</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.577</td>\n",
+       "      <td>Clay</td>\n",
+       "      <td>0.808</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>39,876</td>\n",
+       "      <td>0.851035</td>\n",
+       "      <td>0.153050</td>\n",
+       "      <td>0.004719</td>\n",
+       "      <td>0.012326</td>\n",
+       "      <td>0.001056</td>\n",
+       "      <td>0.031835</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.577</td>\n",
+       "      <td>DeKalb</td>\n",
+       "      <td>0.844</td>\n",
+       "      <td>0.146</td>\n",
+       "      <td>40,558</td>\n",
+       "      <td>0.946637</td>\n",
+       "      <td>0.026404</td>\n",
+       "      <td>0.007236</td>\n",
+       "      <td>0.037126</td>\n",
+       "      <td>0.006820</td>\n",
+       "      <td>0.159921</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.925620</td>\n",
+       "      <td>0.074380</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.577</td>\n",
+       "      <td>Elmore</td>\n",
+       "      <td>0.736</td>\n",
+       "      <td>0.252</td>\n",
+       "      <td>49,071</td>\n",
+       "      <td>0.764367</td>\n",
+       "      <td>0.230173</td>\n",
+       "      <td>0.011433</td>\n",
+       "      <td>0.011121</td>\n",
+       "      <td>0.001999</td>\n",
+       "      <td>0.031799</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>0.577</td>\n",
+       "      <td>Etowah</td>\n",
+       "      <td>0.745</td>\n",
+       "      <td>0.242</td>\n",
+       "      <td>42,951</td>\n",
+       "      <td>0.825877</td>\n",
+       "      <td>0.163812</td>\n",
+       "      <td>0.011262</td>\n",
+       "      <td>0.015201</td>\n",
+       "      <td>0.004152</td>\n",
+       "      <td>0.047736</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.424581</td>\n",
+       "      <td>0.575419</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     State  urban_perc_state   County  percentage20_Donald_Trump  \\\n",
+       "0  Alabama             0.577  Baldwin                      0.762   \n",
+       "1  Alabama             0.577     Clay                      0.808   \n",
+       "2  Alabama             0.577   DeKalb                      0.844   \n",
+       "3  Alabama             0.577   Elmore                      0.736   \n",
+       "4  Alabama             0.577   Etowah                      0.745   \n",
+       "\n",
+       "   percentage20_Joe_Biden avg_sal_2022  white_perc  baa_perc  asian_perc  \\\n",
+       "0                   0.223       56,747    0.893656  0.094556    0.017246   \n",
+       "1                   0.183       39,876    0.851035  0.153050    0.004719   \n",
+       "2                   0.146       40,558    0.946637  0.026404    0.007236   \n",
+       "3                   0.252       49,071    0.764367  0.230173    0.011433   \n",
+       "4                   0.242       42,951    0.825877  0.163812    0.011262   \n",
+       "\n",
+       "   native_perc   pi_perc  his_perc  AQI  CO_perc  NO2_perc   O3_perc  \\\n",
+       "0     0.017071  0.002414  0.050362   40      0.0       0.0  0.808511   \n",
+       "1     0.012326  0.001056  0.031835   27      0.0       0.0  0.000000   \n",
+       "2     0.037126  0.006820  0.159921   37      0.0       0.0  0.925620   \n",
+       "3     0.011121  0.001999  0.031799   37      0.0       0.0  1.000000   \n",
+       "4     0.015201  0.004152  0.047736   42      0.0       0.0  0.424581   \n",
+       "\n",
+       "   PM2.5_perc  PM10_perc  \n",
+       "0    0.191489        0.0  \n",
+       "1    1.000000        0.0  \n",
+       "2    0.074380        0.0  \n",
+       "3    0.000000        0.0  \n",
+       "4    0.575419        0.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df = pd.merge(urban, aqi, how='right', on=['State'])\n",
+    "final_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_df.to_csv(\"mlm_aqi_data.csv\", index=False)"
    ]
   }
  ],
