had to convert salaries to floats

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -4591,7 +4591,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv(\"mlm_aqi_data.csv\", index=False)"
+    "'''final_df.to_csv(\"mlm_aqi_data.csv\", index=False)'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_df = pd.read_csv('mlm_aqi_data.csv')\n",
+    "my_df['avg_sal_2022'] = my_df['avg_sal_2022'].str.replace(',', '').astype('float')\n",
+    "my_df.to_csv(\"mlm_aqi_data.csv\", index=False)"
    ]
   }
  ],
