resolved nans in mlm data set

--- a/cleaning.ipynb
+++ b/cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4603,6 +4603,65 @@
     "my_df = pd.read_csv('mlm_aqi_data.csv')\n",
     "my_df['avg_sal_2022'] = my_df['avg_sal_2022'].str.replace(',', '').astype('float')\n",
     "my_df.to_csv(\"mlm_aqi_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['State', 'urban_perc_state', 'County', 'percentage20_Donald_Trump',\n",
+       "       'percentage20_Joe_Biden', 'avg_sal_2022', 'white_perc', 'baa_perc',\n",
+       "       'asian_perc', 'native_perc', 'pi_perc', 'his_perc', 'AQI', 'CO_perc',\n",
+       "       'NO2_perc', 'O3_perc', 'PM2.5_perc', 'PM10_perc'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('mlm_aqi_data.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['percentage20_Donald_Trump'] = df['percentage20_Donald_Trump'].fillna(df['percentage20_Donald_Trump'].mean())\n",
+    "df['percentage20_Joe_Biden'] = df['percentage20_Joe_Biden'].fillna(df['percentage20_Joe_Biden'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['avg_sal_2022'] = df['avg_sal_2022'].fillna(df['avg_sal_2022'].mean())\n",
+    "df['white_perc'] = df['white_perc'].fillna(df['white_perc'].mean())\n",
+    "df['baa_perc'] = df['baa_perc'].fillna(df['baa_perc'].mean())\n",
+    "df['asian_perc'] = df['asian_perc'].fillna(df['asian_perc'].mean())\n",
+    "df['native_perc'] = df['native_perc'].fillna(df['native_perc'].mean())\n",
+    "df['pi_perc'] = df['pi_perc'].fillna(df['pi_perc'].mean())\n",
+    "df['his_perc'] = df['his_perc'].fillna(df['his_perc'].mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('mlm_aqi_data.csv', index=False)"
    ]
   }
  ],
