--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = aqi.drop(columns= [\"AQI\", 'County'])\n",
+    "X = aqi.drop(columns= [\"AQI\"])\n",
     "y = aqi['AQI']"
    ]
   },
@@ -500,7 +500,7 @@
    ],
    "source": [
     "# One hot encoding for categorical variables\n",
-    "cat_var = [\"State\"]\n",
+    "cat_var = [\"State\", 'County']\n",
     "X_encoded = pd.get_dummies(X, columns = cat_var)\n",
     "\n",
     "X_encoded.head()"
@@ -8053,7 +8053,7 @@
     "\n",
     "plt.xlabel(\"Importance\", fontsize = 12)\n",
     "plt.ylabel(\"Input Feature\", fontsize = 12)\n",
-    "plt.title('Which features are the most important for traffic volume prediction?', fontsize = 12) \n",
+    "plt.title('Which features are the most important for air quality prediction?', fontsize = 12) \n",
     "plt.yticks(fontsize = 8) # fontsize of yticks\n",
     "plt.xticks(fontsize = 8) # fontsize of xticks\n",
     "plt.savefig(\"ad_feature_imp.svg\", bbox_inches=\"tight\")\n",
@@ -8068,7 +8068,7 @@
    "source": [
     "\n",
     "#saving adaboost model\n",
-    "ad_pickle = open('ad_traffic.pickle', 'wb') \n",
+    "ad_pickle = open('ad_aqi.pickle', 'wb') \n",
     "\n",
     "# Write RF model to the file\n",
     "pickle.dump(model_cv, ad_pickle) \n",
