--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -3445,7 +3445,7 @@
     "plt.yticks(fontsize = 8) # fontsize of yticks\n",
     "plt.xticks(fontsize = 8) # fontsize of xticks\n",
     "#plt.savefig(\"rf_feature_imp.svg\", bbox_inches=\"tight\")\n",
-    "plt.savefig(\"rf_feature_imp.png\", bbox_inches=\"tight\")\n",
+    "#plt.savefig(\"rf_feature_imp.png\", bbox_inches=\"tight\")\n",
     "plt.tight_layout();"
    ]
   },
@@ -5717,7 +5717,7 @@
     "plt.yticks(fontsize = 8) # fontsize of yticks\n",
     "plt.xticks(fontsize = 8) # fontsize of xticks\n",
     "#plt.savefig(\"dt_feature_imp.svg\", bbox_inches=\"tight\")\n",
-    "plt.savefig(\"dt_feature_imp.png\", bbox_inches=\"tight\")\n",
+    "#plt.savefig(\"dt_feature_imp.png\", bbox_inches=\"tight\")\n",
     "plt.tight_layout();"
    ]
   },
@@ -8142,7 +8142,7 @@
     "plt.yticks(fontsize = 8) # fontsize of yticks\n",
     "plt.xticks(fontsize = 8) # fontsize of xticks\n",
     "#plt.savefig(\"ad_feature_imp.svg\", bbox_inches=\"tight\")\n",
-    "plt.savefig(\"ad_feature_imp.png\", bbox_inches=\"tight\")\n",
+    "#plt.savefig(\"ad_feature_imp.png\", bbox_inches=\"tight\")\n",
     "plt.tight_layout();\n"
    ]
   },
